# OperationSmokeyBear_DSPilots

./: README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.sh  test_api.sh
.github/workflows/: ci.yml
Backend/: Dockerfile
Backend/incident_parser/: categorize.py  local_llm_provider.py
src/: __init__.py  streamlit_app.py
tests/: test_streamlit_import.py
tools/: generate_synthetic.py  run_audit_demo.py  run_pipeline.py  schedule_exporter.py
